force-app/main/default/objects/Order__c/fields/CodGoods__c.field-meta.xml
<CustomField>
    <fullName>CodGoods__c</fullName>
    <label>CodGoods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>