force-app/main/default/objects/Order__c/fields/CodOrder__c.field-meta.xml
<CustomField>
    <fullName>CodOrder__c</fullName>
    <label>CodOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>