force-app/main/default/objects/Order__c/fields/CodSalesman__c.field-meta.xml
<CustomField>
    <fullName>CodSalesman__c</fullName>
    <label>CodSalesman</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>